--- a/PGDevOpsTips.Web/wwwroot/css/pgdevopstips/layout/_container.css
+++ b/PGDevOpsTips.Web/wwwroot/css/pgdevopstips/layout/_container.css
@@ -27,9 +27,24 @@
         color: #24292e;
     }
 
-    .content-container code {
+    .content-container img {
+        max-width: 100%;
+        height: auto;
+    }
+        
+    .content-container pre {
+        padding: 9.5px;
+        margin: 0 0 10px;
+        line-height: 1.2;
+        word-break: break-all;
+        word-wrap: break-word;
         background-color: #f5f5f5;
-        border-radius: 3px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        white-space: pre-wrap;
+    }
+
+    .content-container code {
         font-size: 85%;
         margin: 0;
         padding: .2em .4em;
