Add BlazorWasmPreRendering.Build for seo

--- a/PGDevOpsTips.Web/Shared/MainLayout.razor
+++ b/PGDevOpsTips.Web/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 <div>
     @Body
 </div>
-<footer class="footer container-fluid">
+@*<footer class="footer container-fluid">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -56,4 +56,4 @@
             </div>
         </div>
     </div>
-</footer>
+</footer>*@
