--- a/PGDevOpsTips.Web/Pages/Articles.razor
+++ b/PGDevOpsTips.Web/Pages/Articles.razor
@@ -62,7 +62,7 @@ else
         <div class="row">
             <div class="col-md-12">
                 @* TODO: Underline drafts *@
-                <p>@articles.Count articles avaliable. By default, you'll only see published articles, but you can also <a href="/articles" @onclick=(EnableDrafts)>view drafts</a></p>
+                <p>@articles.Count articles avaliable. By default, you'll only see published articles, but you can also <a href="/articles" @onclick=(EnableDrafts)>view drafts</a>.</p>
                 <p>
                     <div class="btn-toolbar" role="toolbar" aria-label="Paging buttons">
                         <div class="btn-group me-2" role="group" aria-label="First group">
