Initial commit of page titles and descriptions to all pages

--- a/PGDevOpsTips.Web/Pages/Articles.razor
+++ b/PGDevOpsTips.Web/Pages/Articles.razor
@@ -6,6 +6,12 @@
 @inject IConfiguration Configuration
 @inject RestContentService RestContentService
 
+<PageTitle>Articles | Peter Gregg</PageTitle>
+
+<HeadContent>
+    <meta name="description" content="A place where I share topics in blog articles about technical things I have found useful and hope you will too. Everytime I learn something new, I will share it here.">
+</HeadContent>
+
 <HeaderComponent H1="Articles"
                  Line1="A place where I share topics in blog articles about technical things I have found useful and hope you will too. Everytime I learn something new, I will share it here."
                  Line2="All my articles are written on <a href='https://github.com/petergregg/Content/tree/main/Blog/Articles' target='_blank'><i class='fab fa-github fa-lg' aria-hidden='true'></i> GitHub</a>."
