--- a/PGDevOpsTips.Web/Pages/Cookie-Policy.razor
+++ b/PGDevOpsTips.Web/Pages/Cookie-Policy.razor
@@ -1,4 +1,6 @@
 ﻿@page "/cookie-policy"
+<PageTitle>Cookie Policy | Peter Gregg</PageTitle>
+
 <div class="content-container">
 	<div class="container">
 		<h3>Cookie Policy</h3>
