--- a/PGDevOpsTips.Web/Pages/Index.razor
+++ b/PGDevOpsTips.Web/Pages/Index.razor
@@ -1,5 +1,11 @@
 ﻿@page "/"
 
+<PageTitle>Development and operational tips | Peter Gregg</PageTitle>
+
+<HeadContent>
+    <meta name="description" content="Find, read, download all of Peter Greggs online Articles, Resources, GitHubs, Katas, Videos, Demos, Speaking Information, Talks, Slides in one place">
+</HeadContent>
+
 <HeaderComponent H1="Hi, I am Peter Gregg"
                  Line1="I am a lead software architect and an advocate of clean architecture/code."
                  Line2="I lead the architecture development of Desktop, Web and Microsoft Azure applications."
