--- a/PGDevOpsTips.Web/Pages/Tags.razor
+++ b/PGDevOpsTips.Web/Pages/Tags.razor
@@ -19,6 +19,12 @@
 else
 {
 
+    <PageTitle>@tagViewModel.Tag | Peter Gregg</PageTitle>
+
+    <HeadContent>
+        <meta name="description" content="Everything I have about @tagViewModel.Tag">
+    </HeadContent>
+
     <HeaderComponent H1="Tags"
                      Line1=@($"Everything I have about {tagViewModel.Tag}") />
 
