--- a/PGDevOpsTips.Web/Pages/Resources.razor
+++ b/PGDevOpsTips.Web/Pages/Resources.razor
@@ -6,6 +6,12 @@
 @inject IConfiguration Configuration
 @inject RestContentService RestContentService
 
+<PageTitle>Resources | Peter Gregg</PageTitle>
+
+<HeadContent>
+    <meta name="description" content="A place where I share topics in blog resources about technical things I have found useful and hope you will too. Everytime I learn something new, I will share it here.">
+</HeadContent>
+
 <HeaderComponent H1="Resources"
                  Line1="A place where I share topics in blog resources about technical things I have found useful and hope you will too. Everytime I learn something new, I will share it here."
                  Line2="All my resources are written on <a href='https://github.com/petergregg/Content/tree/main/Blog/Resources' target='_blank'><i class='fab fa-github fa-lg' aria-hidden='true'></i> GitHub</a>."
